# devops-demo

./: .gitignore  AGENTS.md  README.md
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py  health.py  incidents.py  runbooks.py
backend/app/core/: config.py
backend/app/models/: incident.py  runbook.py  state.py
backend/app/persistence/: file_store.py
backend/app/seed/: data.py
backend/app/services/: incidents.py  runbooks.py
backend/tests/: test_api.py  test_incident_service.py  test_persistence.py  test_runbook_service.py
docs/: mcp-notes-stage5.md  mcp-scope.md  prompt_stage_1.md  prompt_stage_2.md  prompt_stage_3.md  prompt_stage_4.md  prompt_stage_5.md
frontend/: AGENTS.md  README.md  angular.json  package-lock.json  package.json  playwright.config.ts
frontend/src/: index.html  main.ts  styles.css
frontend/src/app/: app.component.css  app.component.html  app.component.ts  app.routes.ts
frontend/src/app/models/: incident.model.ts  runbook.model.ts
frontend/src/app/pages/incidents/: incident-detail.component.html  incident-detail.component.ts  incidents-list.component.html  incidents-list.component.ts
frontend/src/app/pages/runbooks/: runbook-detail.component.html  runbook-detail.component.ts  (+2 more)
frontend/src/app/services/: incidents.service.ts  runbooks.service.ts  storage.service.ts
frontend/tests/: app.spec.ts
mcp/: README.md  pyproject.toml
mcp/app/: client.py  core.py  main.py  models.py  resources.py  server.py  tools.py  widgets.py
mcp/tests/: test_mcp_integration.py
