[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "devops-runbook-mcp"
version = "0.1.0"
description = "MCP server for the DevOps Runbook Assistant"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "mcp>=0.3.0",
  "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
